--- a/django/bootcamp/templates/login.html
+++ b/django/bootcamp/templates/login.html
@@ -8,8 +8,8 @@
   </head>
 
   <body >
-<!--   	{% include 'navbar.html' %} -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  	{% include 'navbar.html' %}
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
   <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,7 @@
       <a class="nav-item nav-link disabled" href="#">Disabled</a>
     </div>
   </div>
-</nav>
+</nav> -->
   	<div class="body-section-top" id="home">
   		    <form class="form-signin">
       <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
@@ -37,7 +37,6 @@
         </label>
       </div>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-      <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
     </form>
 	</div>
   </body>
