--- a/django/bootcamp/templates/navbar.html
+++ b/django/bootcamp/templates/navbar.html
@@ -1,5 +1,6 @@
 {% load static %}
-<div class="navigation-bar" style="align-self: baseline;">
+<!-- <div class="navigation-bar" style="align-self: baseline;"> -->
+<div class="navigation-bar fixed-top">
     <ul class="navigation-bar">
         <li><div class="logo"><img src="{% static 'Nuclear_Court Science Logo.png'%}" style='width: 200px' href="\home#home"></div></li>
         <li class="navigation-bar-item" style="margin-right: 2%;"><a href="/camp">CAMP</a></li>
