clean camp header

--- a/django/bootcamp/templates/navbar.html
+++ b/django/bootcamp/templates/navbar.html
@@ -1,5 +1,5 @@
 {% load static %}
-<!-- <div class="navigation-bar" style="align-self: baseline;"> -->
+<!-- Look at this resource for more details - https://getbootstrap.com/docs/4.0/components/navbar/ -->
 <div class="navigation-bar fixed-top">
     <ul class="navigation-bar">
         <li><div class="logo"><img src="{% static 'Nuclear_Court Science Logo.png'%}" style='width: 200px' href="\home#home"></div></li>
