--- a/django/bootcamp/templates/navbar.html
+++ b/django/bootcamp/templates/navbar.html
@@ -3,7 +3,7 @@
 <div class="navigation-bar fixed-top">
     <ul class="navigation-bar">
         <li><div class="logo"><img src="{% static 'Nuclear_Court Science Logo.png'%}" style='width: 200px' href="\home#home"></div></li>
-        <li class="navigation-bar-item" style="margin-right: 2%;"><a href="/camp">CAMP</a></li>
+        <li class="navigation-bar-item" style="margin-right: 2%;"><a href="/signup">CAMP</a></li>
         <li class="navigation-bar-item"><a href="/accounts/login">LOG IN</a></li>
         <li class="navigation-bar-item"><a href="/home#contact">CONTACT</a></li>
         <li class="navigation-bar-item"><a href="/home#demo">VIZ LAB</a></li>
