--- a/templates/camp.html
+++ b/templates/camp.html
@@ -22,8 +22,8 @@
         </ul>
     </div>
     <h2 class="title" style="margin-top: 50px;">COURT SCIENCE CAMPS</h2>
-    <object data="{{ url_for('static', filename='Court Science Camp Flyer.pdf') }}#view=Fit" type="application/pdf" style="width: 700px; height: 850px; display: block; margin: auto; margin-top: 20px;">
-        <embed src="{{ url_for('static', filename='Court Science Camp Flyer.pdf') }}#view=Fit" type="application/pdf" />
+    <object data="{{ url_for('static', filename='Court_Science_Camp_Flyer.pdf') }}#view=Fit" type="application/pdf" style="width: 700px; height: 850px; display: block; margin: auto; margin-top: 20px;">
+        <embed src="{{ url_for('static', filename='Court_Science_Camp_Flyer.pdf') }}#view=Fit" type="application/pdf" />
     </object>
     <div class="registration-form" style="margin-top: 50px; margin-bottom: 10px;">
 		<h4 class="title" style="font-size: 32px">Register Now</h4>
@@ -32,7 +32,7 @@
                 <label for="date">Date</label>
                 <select class="form-control" id="date" name="date">
                     <option value="" name="" disabled selected>Select an available date</option>
-                    <option value="July17" name="July17">Friday, July 17, 10 AM - 12 PM EST</option>
+                    <option value="July17" name="July17">Saturday, July 18, 10 AM - 12 PM EST</option>
                 </select>
             </div>
             <div class="form-group">
