Tooltip, static file migration and X-Y Scatter drop-zone

--- a/django/bootcamp/templates/visualization_lab.html
+++ b/django/bootcamp/templates/visualization_lab.html
@@ -30,7 +30,7 @@
 		<link href="{% static 'css/style.css'%}" rel="stylesheet" type="text/css">
 
 		<!-- 3rd Party JS Libraries -->
-		<script src="{% static 'papaparse.min.js'%}"></script>
+		<script src="{% static 'js/papaparse.min.js'%}"></script>
 		<script src="https://d3js.org/d3.v5.min.js"></script>
 		<script src="https://www.gstatic.com/charts/loader.js"></script>
 		<!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
@@ -384,7 +384,7 @@
 			const bar_input = document.getElementById('bar-input');
 			const scatter_input = document.getElementById('scatter-input');
 			const stats_div = document.getElementById('drop-stats');
-			var img_src = "bootcamp/templates/static/Radar-Chart.png";
+			var img_src = "static/Radar-Chart.png";
 			var target_id = "";
 			var max_players = 3;
 			var min_players = 1;
