--- a/templates/camp.html
+++ b/templates/camp.html
@@ -32,7 +32,7 @@
                 <label for="date">Date</label>
                 <select class="form-control" id="date" name="date">
                     <option value="" name="" disabled selected>Select an available date</option>
-                    <option value="July17" name="July17">Saturday, July 18, 10 AM - 12 PM EST</option>
+                    <option value="July17" name="July17">Saturday, July 18, 9:30 - 11:30 AM EST</option>
                 </select>
             </div>
             <div class="form-group">
