--- a/templates/camp.html
+++ b/templates/camp.html
@@ -37,7 +37,7 @@
             </div>
             <div class="form-group">
                 <label for="name">Full Name</label>
-                <input class="form-control" type="text" id="name" name="name" placeholder="Enter Name">
+                <input class="form-control" type="text" id="name" name="name" placeholder="Enter Name" required>
             </div>
             <div class="form-group">
                 <label for="school">School</label>
@@ -53,14 +53,14 @@
             </div>
             <div class="form-group">
                 <label for="email">E-mail</label>
-                <input class="form-control" type="email" id="email" name="email" placeholder="Enter E-mail">
+                <input class="form-control" type="email" id="email" name="email" placeholder="Enter E-mail" required>
             </div>
             <div class="form-group">
                 <label for="questions">Additional Comments</label>
                 <textarea class="form-control" id="questions" name="questions-comments" rows="3" placeholder="Enter any questions or comments"></textarea>
             </div>
             <div class="form-check" style="margin-bottom: 5px;">
-                <input type="checkbox" class="form-check-input" id="consent" name="consent">
+                <input type="checkbox" class="form-check-input" id="consent" name="consent" required>
                 <label class="form-check-label" for="consent">I have read and agree to the terms and conditions outlined by the <a href="https://drive.google.com/file/d/1e7j1r38R5HWA55pnvbKxf85bvKEOHN7E/view?usp=sharing" target="_blank">Media Consent Form</a>.</label>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
