--- a/django/bootcamp/templates/header.html
+++ b/django/bootcamp/templates/header.html
@@ -22,10 +22,10 @@
 		<nav id="nav">
 			<ul class="main-menu nav navbar-nav navbar-right">
 				<li><a href="/home">Home</a></li>
-				<li><a href="#">About</a></li>
+				<!-- <li><a href="#">About</a></li> -->
 				<li><a href="/viz-lab">Viz Lab</a></li>
-				<li><a href="/learning-center">Learning Center</a></li>
-				<li><a href="/contact">Contact</a></li>
+				<!-- <li><a href="/learning-center">Learning Center</a></li> -->
+				<!-- <li><a href="/contact">Contact</a></li> -->
 			</ul>
 		</nav>
 		<!-- /Navigation -->
