--- a/django/bootcamp/templates/index.html
+++ b/django/bootcamp/templates/index.html
@@ -43,8 +43,8 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-10">
-							<h1 class="white-text">Court Science: Sports as a S.T.E.M. Gateway</h1>
-							<p class="lead white-text">Court Science is a non-profit organization that aims to bridge the gap between STEM and sports by making the power of Data Science accessible to basketball enthusiasts worldwide, through our online interactive data visualization platform called the Visualization Lab and community initiatives.</p>
+							<h1 class="white-text">Court Science: Learning Through Sport</h1>
+							<p class="lead white-text">Court Science is a non-profit organization that aims to bridge the gap between STEM and sports for youth. We've made it fun and easy for you to explore sports data and step up your game in the classroom and on the court!</p>
 							<a class="main-button icon-button" href="/viz-lab">Try it now!</a>
 						</div>
 					</div>
@@ -65,16 +65,16 @@
 
 					<div class="col-md-6">
 						<div class="section-header">
-							<h2>Welcome to Edusite</h2>
-							<p class="lead">Libris vivendo eloquentiam ex ius, nec id splendide abhorreant.</p>
+							<h2>Welcome to Court Science</h2>
+							<p class="lead">This is where sports meets interactive learning, putting math and science in an exciting new light!</p>
 						</div>
 
 						<!-- feature -->
 						<div class="feature">
 							<i class="feature-icon fa fa-flask"></i>
 							<div class="feature-content">
-								<h4>Online Courses </h4>
-								<p>Ceteros fuisset mei no, soleat epicurei adipiscing ne vis. Et his suas veniam nominati.</p>
+								<h4>Virtual Learning</h4>
+								<p>Regular workshops, aimed at K-12 students, bring the virtual classroom to the courts</p>
 							</div>
 						</div>
 						<!-- /feature -->
@@ -83,8 +83,8 @@
 						<div class="feature">
 							<i class="feature-icon fa fa-users"></i>
 							<div class="feature-content">
-								<h4>Expert Teachers</h4>
-								<p>Ceteros fuisset mei no, soleat epicurei adipiscing ne vis. Et his suas veniam nominati.</p>
+								<h4>Expert Instructors</h4>
+								<p>A curriculum developed and taught by brilliant and accomplished instructors</p>
 							</div>
 						</div>
 						<!-- /feature -->
@@ -93,8 +93,8 @@
 						<div class="feature">
 							<i class="feature-icon fa fa-comments"></i>
 							<div class="feature-content">
-								<h4>Community</h4>
-								<p>Ceteros fuisset mei no, soleat epicurei adipiscing ne vis. Et his suas veniam nominati.</p>
+								<h4>Engagement</h4>
+								<p>Students discuss and fight for their point of view using data and a structured approach while keeping a friendly vibe</p>
 							</div>
 						</div>
 						<!-- /feature -->
@@ -124,8 +124,8 @@
 				<!-- row -->
 				<div class="row">
 					<div class="section-header text-center">
-						<h2>Explore Courses</h2>
-						<p class="lead">Libris vivendo eloquentiam ex ius, nec id splendide abhorreant.</p>
+						<h2>Sample Outputs</h2>
+						<p class="lead">These are the types of charts and data the students learn to interpret and apply:</p>
 					</div>
 				</div>
 				<!-- /row -->
@@ -137,23 +137,23 @@
 					<div class="row">
 
 						<!-- single course -->
-						<div class="col-md-3 col-sm-6 col-xs-6">
+						<div class="col-md-4 col-sm-6 col-xs-6">
 							<div class="course">
 								<a href="#" class="course-img">
 									<img src="{% static 'img/course01.jpg'%}" alt="">
-									<i class="course-link-icon fa fa-link"></i>
+									<!-- <i class="course-link-icon fa fa-link"></i> -->
 								</a>
-								<a class="course-title" href="#">Beginner to Pro in Excel: Financial Modeling and Valuation</a>
-								<div class="course-details">
+								<a class="course-title" href="#">Radar Charts to understand holistic view of a player's skills</a>
+								<!-- <div class="course-details">
 									<span class="course-category">Business</span>
 									<span class="course-price course-free">Free</span>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<!-- /single course -->
 
 						<!-- single course -->
-						<div class="col-md-3 col-sm-6 col-xs-6">
+						<div class="col-md-4 col-sm-6 col-xs-6">
 							<div class="course">
 								<a href="#" class="course-img">
 									<img src="{% static 'img/course02.jpg'%}" alt="">
@@ -169,7 +169,7 @@
 						<!-- /single course -->
 
 						<!-- single course -->
-						<div class="col-md-3 col-sm-6 col-xs-6">
+						<div class="col-md-4 col-sm-6 col-xs-6">
 							<div class="course">
 								<a href="#" class="course-img">
 									<img src="{% static 'img/course03.jpg'%}" alt="">
@@ -184,103 +184,11 @@
 						</div>
 						<!-- /single course -->
 
-						<div class="col-md-3 col-sm-6 col-xs-6">
-							<div class="course">
-								<a href="#" class="course-img">
-									<img src="{% static 'img/course04.jpg'%}" alt="">
-									<i class="course-link-icon fa fa-link"></i>
-								</a>
-								<a class="course-title" href="#">The Complete Web Development Course</a>
-								<div class="course-details">
-									<span class="course-category">Web Development</span>
-									<span class="course-price course-free">Free</span>
-								</div>
-							</div>
-						</div>
-						<!-- /single course -->
-
-					</div>
-					<!-- /row -->
-
-					<!-- row -->
-					<div class="row">
-
-						<!-- single course -->
-						<div class="col-md-3 col-sm-6 col-xs-6">
-							<div class="course">
-								<a href="#" class="course-img">
-									<img src="{% static 'img/course05.jpg'%}" alt="">
-									<i class="course-link-icon fa fa-link"></i>
-								</a>
-								<a class="course-title" href="#">PHP Tips, Tricks, and Techniques</a>
-								<div class="course-details">
-									<span class="course-category">Web Development</span>
-									<span class="course-price course-free">Free</span>
-								</div>
-							</div>
-						</div>
-						<!-- /single course -->
-
-						<!-- single course -->
-						<div class="col-md-3 col-sm-6 col-xs-6">
-							<div class="course">
-								<a href="#" class="course-img">
-									<img src="{% static 'img/course06.jpg'%}" alt="">
-									<i class="course-link-icon fa fa-link"></i>
-								</a>
-								<a class="course-title" href="#">All You Need To Know About Web Design</a>
-								<div class="course-details">
-									<span class="course-category">Web Design</span>
-									<span class="course-price course-free">Free</span>
-								</div>
-							</div>
-						</div>
-						<!-- /single course -->
-
-						<!-- single course -->
-						<div class="col-md-3 col-sm-6 col-xs-6">
-							<div class="course">
-								<a href="#" class="course-img">
-									<img src="{% static 'img/course07.jpg'%}" alt="">
-									<i class="course-link-icon fa fa-link"></i>
-								</a>
-								<a class="course-title" href="#">How to Get Started in Photography</a>
-								<div class="course-details">
-									<span class="course-category">Photography</span>
-									<span class="course-price course-free">Free</span>
-								</div>
-							</div>
-						</div>
-						<!-- /single course -->
-
-
-						<!-- single course -->
-						<div class="col-md-3 col-sm-6 col-xs-6">
-							<div class="course">
-								<a href="#" class="course-img">
-									<img src="{% static 'img/course08.jpg'%}" alt="">
-									<i class="course-link-icon fa fa-link"></i>
-								</a>
-								<a class="course-title" href="#">Typography From A to Z</a>
-								<div class="course-details">
-									<span class="course-category">Typography</span>
-									<span class="course-price course-free">Free</span>
-								</div>
-							</div>
-						</div>
-						<!-- /single course -->
-
 					</div>
 					<!-- /row -->
 
 				</div>
 				<!-- /courses -->
-
-				<div class="row">
-					<div class="center-btn">
-						<a class="main-button icon-button" href="#">More Courses</a>
-					</div>
-				</div>
 
 			</div>
 			<!-- container -->
@@ -288,118 +196,11 @@
 		</div>
 		<!-- /Courses -->
 
-		<!-- Call To Action -->
-		<div id="cta" class="section">
-
-			<!-- Backgound Image -->
-			<div class="bg-image bg-parallax overlay" style="background-image:url(bootcamp/templates/static/img/cta1-background.jpg)"></div>
-			<!-- /Backgound Image -->
-
-			<!-- container -->
-			<div class="container">
-
-				<!-- row -->
-				<div class="row">
-
-					<div class="col-md-6">
-						<h2 class="white-text">Ceteros fuisset mei no, soleat epicurei adipiscing ne vis.</h2>
-						<p class="lead white-text">Ceteros fuisset mei no, soleat epicurei adipiscing ne vis. Et his suas veniam nominati.</p>
-						<a class="main-button icon-button" href="#">Get Started!</a>
-					</div>
-
-				</div>
-				<!-- /row -->
-
-			</div>
-			<!-- /container -->
-
-		</div>
-		<!-- /Call To Action -->
-
-		<!-- Why us -->
-		<div id="why-us" class="section">
-
-			<!-- container -->
-			<div class="container">
-
-				<!-- row -->
-				<div class="row">
-					<div class="section-header text-center">
-						<h2>Why Edusite</h2>
-						<p class="lead">Libris vivendo eloquentiam ex ius, nec id splendide abhorreant.</p>
-					</div>
-
-					<!-- feature -->
-					<div class="col-md-4">
-						<div class="feature">
-							<i class="feature-icon fa fa-flask"></i>
-							<div class="feature-content">
-								<h4>Online Courses</h4>
-								<p>Ceteros fuisset mei no, soleat epicurei adipiscing ne vis. Et his suas veniam nominati.</p>
-							</div>
-						</div>
-					</div>
-					<!-- /feature -->
-
-					<!-- feature -->
-					<div class="col-md-4">
-						<div class="feature">
-							<i class="feature-icon fa fa-users"></i>
-							<div class="feature-content">
-								<h4>Expert Teachers</h4>
-								<p>Ceteros fuisset mei no, soleat epicurei adipiscing ne vis. Et his suas veniam nominati.</p>
-							</div>
-						</div>
-					</div>
-					<!-- /feature -->
-
-					<!-- feature -->
-					<div class="col-md-4">
-						<div class="feature">
-							<i class="feature-icon fa fa-comments"></i>
-							<div class="feature-content">
-								<h4>Community</h4>
-								<p>Ceteros fuisset mei no, soleat epicurei adipiscing ne vis. Et his suas veniam nominati.</p>
-							</div>
-						</div>
-					</div>
-					<!-- /feature -->
-
-				</div>
-				<!-- /row -->
-
-				<hr class="section-hr">
-
-				<!-- row -->
-				<div class="row">
-
-					<div class="col-md-6">
-						<h3>Persius imperdiet incorrupte et qui, munere nusquam et nec.</h3>
-						<p class="lead">Libris vivendo eloquentiam ex ius, nec id splendide abhorreant.</p>
-						<p>No vel facete sententiae, quodsi dolores no quo, pri ex tamquam interesset necessitatibus. Te denique cotidieque delicatissimi sed. Eu doming epicurei duo. Sit ea perfecto deseruisse theophrastus. At sed malis hendrerit, elitr deseruisse in sit, sit ei facilisi mediocrem.</p>
-					</div>
-
-					<div class="col-md-5 col-md-offset-1">
-						<a class="about-video" href="#">
-							<img src="{% static 'img/about-video.jpg'%}" alt="">
-							<i class="play-icon fa fa-play"></i>
-						</a>
-					</div>
-
-				</div>
-				<!-- /row -->
-
-			</div>
-			<!-- /container -->
-
-		</div>
-		<!-- /Why us -->
-
 		<!-- Contact CTA -->
 		<div id="contact-cta" class="section">
 
 			<!-- Backgound Image -->
-			<div class="bg-image bg-parallax overlay" style="background-image:url(bootcamp/templates/static/img/cta2-background.jpg)"></div>
+			<div class="bg-image bg-parallax overlay" style="background-image:url(static/img/cta2-background.jpg)"></div>
 			<!-- Backgound Image -->
 
 			<!-- container -->
@@ -410,8 +211,8 @@
 
 					<div class="col-md-8 col-md-offset-2 text-center">
 						<h2 class="white-text">Contact Us</h2>
-						<p class="lead white-text">Libris vivendo eloquentiam ex ius, nec id splendide abhorreant.</p>
-						<a class="main-button icon-button" href="#">Contact Us Now</a>
+						<p class="lead white-text">Give us a shout! We'd love to hear your feedback or work together.</p>
+						<button id="contact-button" class="main-button icon-button" onclick="sendMail(); return false">Contact Us</button>
 					</div>
 
 				</div>
@@ -445,11 +246,11 @@
 					<!-- footer nav -->
 					<div class="col-md-6">
 						<ul class="footer-nav">
-							<li><a href="{{ url_for('home'%}">Home</a></li>
-							<li><a href="#">About</a></li>
-							<li><a href="{{ url_for('viz_lab'%}">Viz Lab</a></li>
-							<li><a href="{{ url_for('learning_center'%}">Learning Center</a></li>
-							<li><a href="{{ url_for('contact'%}">Contact</a></li>
+							<li><a href="/home">Home</a></li>
+							<!-- <li><a href="#">About</a></li> -->
+							<li><a href="/viz-lab">Viz Lab</a></li>
+							<!-- <li><a href="{{ url_for('learning_center'%}">Learning Center</a></li> -->
+							<!-- <li><a href="{{ url_for('contact'%}">Contact</a></li> -->
 						</ul>
 					</div>
 					<!-- /footer nav -->
@@ -464,10 +265,10 @@
 					<div class="col-md-4 col-md-push-8">
 						<ul class="footer-social">
 							<!-- <li><a href="#" class="facebook"><i class="fa fa-facebook"></i></a></li> -->
-							<li><a href="#" class="twitter"><i class="fa fa-twitter"></i></a></li>
+							<!-- <li><a href="#" class="twitter"><i class="fa fa-twitter"></i></a></li> -->
 							<!-- <li><a href="#" class="instagram"><i class="fa fa-instagram"></i></a></li> -->
 							<!-- <li><a href="#" class="youtube"><i class="fa fa-youtube"></i></a></li> -->
-							<li><a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a></li>
+							<!-- <li><a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a></li> -->
 						</ul>
 					</div>
 					<!-- /social -->
