--- a/django/bootcamp/templates/index.html
+++ b/django/bootcamp/templates/index.html
@@ -25,6 +25,9 @@
 		<!-- Custom stylesheet -->
 		<link href="{% static 'css/style.css'%}" rel="stylesheet" type="text/css">
 
+		<!-- JS Scripts to include -->
+		<script src="{% static 'Script/CourtScienceMagic.js'%}"></script>
+
     </head>
 	<body>
 
@@ -139,11 +142,11 @@
 						<!-- single course -->
 						<div class="col-md-4 col-sm-6 col-xs-6">
 							<div class="course">
-								<a href="#" class="course-img">
-									<img src="{% static 'img/course01.jpg'%}" alt="">
-									<!-- <i class="course-link-icon fa fa-link"></i> -->
+								<a href="/viz-lab" class="course-img">
+									<img src="{% static 'img/Sample Radar Chart.png'%}" style="height: 330px;" alt="">
+									<i class="course-button main-button" href="/viz-lab">BUILD ONE YOURSELF!</i>
 								</a>
-								<a class="course-title" href="#">Radar Charts to understand holistic view of a player's skills</a>
+								<a class="course-title">Radar Charts display holistic view of a player's skills</a>
 								<!-- <div class="course-details">
 									<span class="course-category">Business</span>
 									<span class="course-price course-free">Free</span>
@@ -155,15 +158,15 @@
 						<!-- single course -->
 						<div class="col-md-4 col-sm-6 col-xs-6">
 							<div class="course">
-								<a href="#" class="course-img">
-									<img src="{% static 'img/course02.jpg'%}" alt="">
-									<i class="course-link-icon fa fa-link"></i>
+								<a href="/viz-lab" class="course-img">
+									<img src="{% static 'img/Sample Bar Chart.png'%}" style="height: 330px;" alt="">
+									<i class="course-button main-button" href="/viz-lab">BUILD ONE YOURSELF!</i>
 								</a>
-								<a class="course-title" href="#">Introduction to CSS </a>
-								<div class="course-details">
+								<a class="course-title">Bar Charts depict specific skill comparisons</a>
+								<!-- <div class="course-details">
 									<span class="course-category">Web Design</span>
 									<span class="course-price course-premium">Premium</span>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<!-- /single course -->
@@ -171,15 +174,15 @@
 						<!-- single course -->
 						<div class="col-md-4 col-sm-6 col-xs-6">
 							<div class="course">
-								<a href="#" class="course-img">
-									<img src="{% static 'img/course03.jpg'%}" alt="">
-									<i class="course-link-icon fa fa-link"></i>
+								<a href="/viz-lab" class="course-img">
+									<img src="{% static 'img/Sample Scatter Chart.png'%}" style="height: 330px;" alt="">
+									<i class="course-button main-button" href="/viz-lab">BUILD ONE YOURSELF!</i>
 								</a>
-								<a class="course-title" href="#">The Ultimate Drawing Course | From Beginner To Advanced</a>
-								<div class="course-details">
+								<a class="course-title">Scatter plots help visualize patterns and correlations</a>
+								<!-- <div class="course-details">
 									<span class="course-category">Drawing</span>
 									<span class="course-price course-premium">Premium</span>
-								</div>
+								</div> -->
 							</div>
 						</div>
 						<!-- /single course -->
