--- a/django/bootcamp/templates/static/css/style.css
+++ b/django/bootcamp/templates/static/css/style.css
@@ -1741,3 +1741,36 @@ outline: 4px solid lightsalmon;
     -o-transition-property: -o-transform;
     transition-property: transform;
 }
+
+.course .course-img .course-button {
+	position:absolute;
+	left:50%;
+	top:50%;
+	-webkit-transform: translate(-50% , calc(-50% - 15px));
+	    -ms-transform: translate(-50% , calc(-50% - 15px));
+	        transform: translate(-50% , calc(-50% - 15px));
+	width:160px;
+	height:60px;
+	line-height:20px;
+	text-align:center;
+	border:2px solid #fff;
+	color:#fff;
+	border-radius:50%;
+	opacity:0;
+	z-index:999;
+	-webkit-transition:0.2s all;
+	transition:0.2s all;
+}
+
+.course .course-img .course-button:hover {
+	color: #FF6700;
+	z-index:999;
+}
+
+.course .course-img:hover .course-button {
+	-webkit-transform: translate(-50% , -50%);
+	    -ms-transform: translate(-50% , -50%);
+	        transform: translate(-50% , -50%);
+	opacity:1;
+	z-index:999;
+}
