--- a/django/bootcamp/templates/visualization_lab.html
+++ b/django/bootcamp/templates/visualization_lab.html
@@ -66,7 +66,7 @@
 				<div class="row" style="display: block;">
 						<div class="col-md-8 col-md-offset-2 text-center">
 							<h2 class="white-text">VISUALIZATION LAB</h2>
-							<p class="lead white-text">Expore countless sports dataset using intuitive and powerful tools.</p>
+							<p class="lead white-text">Explore countless sports datasets using intuitive and powerful tools.</p>
 							<!-- <a class="main-button icon-button" href="#">Try it now!</a> -->
 						</div>
 				</div>
@@ -122,9 +122,9 @@
 				<div class="row">
 					<div id="data-select" class="col-md-6 col-md-offset-5">
 						<select id="drop-down" name="Data selection">
-							<option value="">Select NBA Data Source</option>
-							<option value="https://raw.githubusercontent.com/court-science/MVP/master/NBA%20Data/2019-2020%20NBA%20Player%20Stats.csv">2019-2020 NBA Stats</option>
-							<option value="https://raw.githubusercontent.com/court-science/MVP/master/NBA%20Data/2018-2019%20NBA%20Advanced%20Scoring%20Stats.csv">2019-2020 NBA Advanced Stats</option>
+							<option value="" disabled selected>Select NBA Data Source</option>
+							<option value="https://raw.githubusercontent.com/court-science/MVP/master/NBA%20Data/2019-2020%20NBA%20Player%20Stats.xlsx%20-%20Sheet1.csv">2019-2020 NBA Season</option>
+                        	<option value="https://raw.githubusercontent.com/court-science/MVP/master/NBA%20Data/2018-2019%20NBA%20Player%20Stats.xlsx%20-%20Sheet1.csv">2018-2019 NBA Season</option>
 							<option value="https://raw.githubusercontent.com/court-science/MVP/master/NBA%20Data/nba_draft_combine_all_years.csv">NBA Draft Combine</option>
 						</select>
 
@@ -364,7 +364,7 @@
 					<!-- copyright -->
 					<div class="col-md-8 col-md-pull-4">
 						<div class="footer-copyright">
-							<span>&copy; Copyright 2018. All Rights Reserved. | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com">Colorlib</a></span>
+							<span>&copy; Copyright 2019 - 2020 Court Science Inc. All rights reserved.</span>
 						</div>
 					</div>
 					<!-- /copyright -->
