--- a/django/bootcamp/templates/header.html
+++ b/django/bootcamp/templates/header.html
@@ -25,7 +25,7 @@
 				<!-- <li><a href="#">About</a></li> -->
 				<li><a href="/viz-lab">Viz Lab</a></li>
 				<!-- <li><a href="/learning-center">Learning Center</a></li> -->
-				<!-- <li><a href="/contact">Contact</a></li> -->
+				<li><a href="/camp">Camp</a></li>
 			</ul>
 		</nav>
 		<!-- /Navigation -->
