--- a/django/bootcamp/templates/index.html
+++ b/django/bootcamp/templates/index.html
@@ -279,7 +279,7 @@
 					<!-- copyright -->
 					<div class="col-md-8 col-md-pull-4">
 						<div class="footer-copyright">
-							<span>&copy; Copyright 2018. All Rights Reserved. | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com">Colorlib</a></span>
+							<span>&copy; Copyright 2019 - 2020 Court Science Inc. All rights reserved.</span>
 						</div>
 					</div>
 					<!-- /copyright -->
