--- a/django/bootcamp/templates/static/style.css
+++ b/django/bootcamp/templates/static/style.css
@@ -18,12 +18,13 @@ p > a {
     color: #F6852F!important;
 }
 
+/*
 .logo {
     margin-left: 4%;
     float: left;
     padding: 0%;
 }
-
+*/
 .body-section-1 {
     background-color: #f2f2f2;
     padding: 7%;
