--- a/django/bootcamp/templates/visualization_lab.html
+++ b/django/bootcamp/templates/visualization_lab.html
@@ -100,8 +100,8 @@
 						<h4 style="width: 100%;">Follow the steps below: </h4>
 						<p>1. Select a sample dataset or upload your own CSV file <br></p>
 						<p>2. Select the chart type you want to plot <br></p>
-						<p>3. Drag and drop stats into the 'Stats to Plot' area <br></p>
-						<p>4. Drag and drop players into the 'Players to Compare' area <br></p>
+						<p>3. Drag and drop the stats to plot into the 'Drop Stats' area <br></p>
+						<p>4. Drag and drop the players to compare into the 'Drop Players' area <br></p>
 						<p>5. Watch your visualizations being created in real-time! <br></p>
 					</div>
 					<!-- /Instructions -->
@@ -338,7 +338,7 @@
 							<!-- <li><a href="#">About</a></li> -->
 							<li><a href="/viz-lab">Viz Lab</a></li>
 							<!-- <li><a href="/learning-center">Learning Center</a></li> -->
-							<!-- <li><a href="/contact">Contact</a></li> -->
+							<li><a href="/camp">Camp</a></li>
 						</ul>
 					</div>
 					<!-- /footer nav -->
