--- a/django/bootcamp/templates/camp.html
+++ b/django/bootcamp/templates/camp.html
@@ -7,7 +7,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-		<title>HTML Education Template</title>
+		<title>Court Science</title>
+
+        <link rel="icon" type="image/png" href="{% static 'favicon.png'%}">
 
 		<!-- Google font -->
 		<link href="https://fonts.googleapis.com/css?family=Lato:700%7CMontserrat:400,600" rel="stylesheet">
@@ -24,9 +26,10 @@
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 		<!--[if lt IE 9]>
-		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
+        <script src="{% static 'Script/CourtScienceMagic.js'%}"></script>
 
     </head>
 	<body>
@@ -39,14 +42,14 @@
 		<div class="hero-area section">
 
 			<!-- Backgound Image -->
-			<div class="bg-image bg-parallax overlay" style="background-image:url(./img/page-background.jpg)"></div>
+			<div class="bg-image bg-parallax overlay" style="background-image:url(static/img/camp-background.png)"></div>
 			<!-- /Backgound Image -->
 
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1 text-center">
 						<h1 class="white-text">COURT SCIENCE CAMPS</h1>
-                        <p class="lead white-text">Explore the science behind sports and elevate your game in one of our free virtual camps.</p>
+                        <p class="lead white-text">Explore the science behind sports while staying active in a live e-learning environment.</p>
 					</div>
 				</div>
 			</div>
@@ -119,6 +122,33 @@
 		</div>
 
 
+        <div id="contact-cta" class="section">
+
+			<!-- Backgound Image -->
+			<div class="bg-image bg-parallax overlay" style="background-image:url(static/img/camp-background.png)"></div>
+			<!-- Backgound Image -->
+
+			<!-- container -->
+			<div class="container">
+
+				<!-- row -->
+				<div class="row">
+
+					<div class="col-md-8 col-md-offset-2 text-center">
+						<h2 class="white-text">Contact Us</h2>
+						<p class="lead white-text">Give us a shout! We'd love to hear your feedback or work together.</p>
+						<button id="contact-button" class="main-button icon-button" onclick="sendMail(); return false">Contact Us</button>
+					</div>
+
+				</div>
+				<!-- /row -->
+
+			</div>
+			<!-- /container -->
+
+		</div>
+
+
 		<!-- Footer -->
 		<footer id="footer" class="section">
 
@@ -141,11 +171,11 @@
 					<!-- footer nav -->
 					<div class="col-md-6">
 						<ul class="footer-nav">
-							<li><a href="{{ url_for('home'%}">Home</a></li>
-							<li><a href="#">About</a></li>
-							<li><a href="{{ url_for('viz_lab'%}">Viz Lab</a></li>
-							<li><a href="{{ url_for('learning_center'%}">Learning Center</a></li>
-							<li><a href="{{ url_for('contact'%}">Contact</a></li>
+							<li><a href="/home">Home</a></li>
+							<!-- <li><a href="#">About</a></li> -->
+							<li><a href="/viz-lab">Viz Lab</a></li>
+							<!-- <li><a href="/learning-center">Learning Center</a></li> -->
+							<li><a href="/camp">Camp</a></li>
 						</ul>
 					</div>
 					<!-- /footer nav -->
@@ -159,9 +189,11 @@
 					<!-- social -->
 					<div class="col-md-4 col-md-push-8">
 						<ul class="footer-social">
-							<li><a href="#" class="facebook"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#" class="twitter"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a></li>
+							<!-- <li><a href="#" class="facebook"><i class="fa fa-facebook"></i></a></li> -->
+							<!-- <li><a href="#" class="twitter"><i class="fa fa-twitter"></i></a></li> -->
+							<!-- <li><a href="#" class="instagram"><i class="fa fa-instagram"></i></a></li> -->
+							<!-- <li><a href="#" class="youtube"><i class="fa fa-youtube"></i></a></li> -->
+							<!-- <li><a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a></li> -->
 						</ul>
 					</div>
 					<!-- /social -->
@@ -169,7 +201,7 @@
 					<!-- copyright -->
 					<div class="col-md-8 col-md-pull-4">
 						<div class="footer-copyright">
-							<span>&copy; Copyright 2018. All Rights Reserved. | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com">Colorlib</a></span>
+							<span>&copy; Copyright 2019 - 2020 Court Science Inc. All rights reserved.</span>
 						</div>
 					</div>
 					<!-- /copyright -->
