--- a/django/bootcamp/templates/index.html
+++ b/django/bootcamp/templates/index.html
@@ -45,10 +45,12 @@
 			<div class="home-wrapper">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-10">
-							<h1 class="white-text">Court Science: Learning Through Sport</h1>
-							<p class="lead white-text">Court Science is a non-profit organization that aims to bridge the gap between STEM and sports for youth. We've made it fun and easy for you to explore sports data and step up your game in the classroom and on the court!</p>
-							<a class="main-button icon-button" href="/viz-lab">Try it now!</a>
+						<div class="text-center">
+							<h1 class="white-text" style="font-size: 65px; font-weight: 700;">STEM THROUGH SPORTS.</h1>
+							<br>
+                            <p class="lead white-text">Court Science is a non-profit organization that aims to bridge the gap between STEM and sports for youth. We've made it fun and easy for you to explore sports data and step up your game in the classroom and on the court!</p>
+							<br>
+                            <a class="main-button icon-button" href="/viz-lab">Try it now!</a>
 						</div>
 					</div>
 				</div>
@@ -57,8 +59,37 @@
 		</div>
 		<!-- /Home -->
 
+        <div id="about" class="section">
+
+			<!-- container -->
+			<div class="container">
+
+				<!-- row -->
+				<div class="row">
+
+						<div class="section-header text-center">
+							<h2>WHO WE ARE</h2>
+							<p class="lead">
+                                Court Science is a non-profit organization that aims to bridge the gap between STEM and sports by making the
+                                power of Data Science accessible to basketball enthusiasts worldwide, through our online interactive data
+                                visualization platform called the <a class="body-link" href="#demo">Visualization Lab</a> and community initiatives.
+                                In light of COVID-19, we have shifted all of our outreach efforts online (Youth Basketball Data Camp coming soon!),
+                                and hope that our simple yet powerful tools can empower you to explore new dimensions of your favourite sport
+                                through a STEM lens, while learning something new about Data Science. It's as easy as a few clicks and you're on
+                                your way!
+                            </p>
+						</div>
+
+				</div>
+				<!-- row -->
+
+			</div>
+			<!-- container -->
+		</div>
+
+
 		<!-- About -->
-		<div id="about" class="section">
+		<div id="virtual-workshops" class="section alternate">
 
 			<!-- container -->
 			<div class="container">
@@ -68,7 +99,7 @@
 
 					<div class="col-md-6">
 						<div class="section-header">
-							<h2>Welcome to Court Science</h2>
+							<h2>WELCOME TO COURT SCIENCE</h2>
 							<p class="lead">This is where sports meets interactive learning, putting math and science in an exciting new light!</p>
 						</div>
 
@@ -127,7 +158,7 @@
 				<!-- row -->
 				<div class="row">
 					<div class="section-header text-center">
-						<h2>Sample Outputs</h2>
+						<h2>SAMPLE OUTPUTS</h2>
 						<p class="lead">These are the types of charts and data the students learn to interpret and apply:</p>
 					</div>
 				</div>
