--- a/django/bootcamp/templates/camp.html
+++ b/django/bootcamp/templates/camp.html
@@ -48,7 +48,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1 text-center">
-						<h1 class="white-text">COURT SCIENCE CAMPS</h1>
+						<h1 class="white-text">COURT SCIENCE VIRTUAL CAMP</h1>
                         <p class="lead white-text">Explore the science behind sports while staying active in a live e-learning environment.</p>
 					</div>
 				</div>
@@ -135,9 +135,9 @@
 				<div class="row">
 
 					<div class="col-md-8 col-md-offset-2 text-center">
-						<h2 class="white-text">Contact Us</h2>
+						<h2 class="white-text">CONTACT US</h2>
 						<p class="lead white-text">Give us a shout! We'd love to hear your feedback or work together.</p>
-						<button id="contact-button" class="main-button icon-button" onclick="sendMail(); return false">Contact Us</button>
+						<button id="contact-button" class="main-button icon-button" onclick="sendMail(); return false">CONTACT US</button>
 					</div>
 
 				</div>
