--- a/django/bootcamp/templates/index.html
+++ b/django/bootcamp/templates/index.html
@@ -48,9 +48,9 @@
 						<div class="text-center">
 							<h1 class="white-text" style="font-size: 65px; font-weight: 700;">STEM THROUGH SPORTS.</h1>
 							<br>
-                            <p class="lead white-text">Court Science is a non-profit organization that aims to bridge the gap between STEM and sports for youth. We've made it fun and easy for you to explore sports data and step up your game in the classroom and on the court!</p>
+                            <p class="lead white-text" style="font-size: 26px;">Court Science is the interactive online platform that makes it fun and easy for youth to explore sports data science and step up their game in the classroom and on the court!</p>
 							<br>
-                            <a class="main-button icon-button" href="/viz-lab">Try it now!</a>
+                            <a class="main-button icon-button" href="/viz-lab">TRY IT NOW</a>
 						</div>
 					</div>
 				</div>
@@ -70,13 +70,11 @@
 						<div class="section-header text-center">
 							<h2>WHO WE ARE</h2>
 							<p class="lead">
-                                Court Science is a non-profit organization that aims to bridge the gap between STEM and sports by making the
-                                power of Data Science accessible to basketball enthusiasts worldwide, through our online interactive data
-                                visualization platform called the <a class="body-link" href="#demo">Visualization Lab</a> and community initiatives.
-                                In light of COVID-19, we have shifted all of our outreach efforts online (Youth Basketball Data Camp coming soon!),
-                                and hope that our simple yet powerful tools can empower you to explore new dimensions of your favourite sport
-                                through a STEM lens, while learning something new about Data Science. It's as easy as a few clicks and you're on
-                                your way!
+                                Court Science is a federally incorporated not-for-profit organization that aims to bridge the gap between STEM and sports
+                                by making the power of Data Science accessible to youth and sports enthusiasts worldwide, through our free online interactive
+                                data visualization platform and community initiatives. In light of COVID-19, we have shifted all of our outreach efforts online
+                                including a free Sports Science Camp with a series of live virtual international workshops geared towards youth interested in
+                                exploring their favourite sport through the lens of STEM and creative problem solving, while learning about Data Science.
                             </p>
 						</div>
 
@@ -99,8 +97,8 @@
 
 					<div class="col-md-6">
 						<div class="section-header">
-							<h2>WELCOME TO COURT SCIENCE</h2>
-							<p class="lead">This is where sports meets interactive learning, putting math and science in an exciting new light!</p>
+							<h2>COURT SCIENCE VIRTUAL CAMP</h2>
+							<p class="lead"><b>Court Science Virtual Camp</b> is a first of its kind interactive educational program where sports meets active learning, putting math and science in an exciting new light!</p>
 						</div>
 
 						<!-- feature -->
@@ -108,7 +106,7 @@
 							<i class="feature-icon fa fa-flask"></i>
 							<div class="feature-content">
 								<h4>Virtual Learning</h4>
-								<p>Regular workshops, aimed at K-12 students, bring the virtual classroom to the courts</p>
+								<p>Regular workshops offered free of cost, aimed at K-12 students, bring the virtual classroom to the court</p>
 							</div>
 						</div>
 						<!-- /feature -->
@@ -118,7 +116,7 @@
 							<i class="feature-icon fa fa-users"></i>
 							<div class="feature-content">
 								<h4>Expert Instructors</h4>
-								<p>A curriculum developed and taught by brilliant and accomplished instructors</p>
+								<p>A curriculum developed and taught by knowledgeable and passionate instructors</p>
 							</div>
 						</div>
 						<!-- /feature -->
@@ -128,9 +126,14 @@
 							<i class="feature-icon fa fa-comments"></i>
 							<div class="feature-content">
 								<h4>Engagement</h4>
-								<p>Students discuss and fight for their point of view using data and a structured approach while keeping a friendly vibe</p>
+                                <p>
+                                    Students investigate questions about sports through data exploration using the scientific method and creative problem solving,
+                                    before presenting their findings and engaging in friendly discussions with other campers
+                                </p>
 							</div>
 						</div>
+                        <br>
+                        <a class="main-button icon-button" href="/camp">LEARN MORE</a>
 						<!-- /feature -->
 
 					</div>
@@ -244,9 +247,9 @@
 				<div class="row">
 
 					<div class="col-md-8 col-md-offset-2 text-center">
-						<h2 class="white-text">Contact Us</h2>
+						<h2 class="white-text">CONTACT US</h2>
 						<p class="lead white-text">Give us a shout! We'd love to hear your feedback or work together.</p>
-						<button id="contact-button" class="main-button icon-button" onclick="sendMail(); return false">Contact Us</button>
+						<button id="contact-button" class="main-button icon-button" onclick="sendMail(); return false">CONTACT US</button>
 					</div>
 
 				</div>
@@ -283,8 +286,7 @@
 							<li><a href="/home">Home</a></li>
 							<!-- <li><a href="#">About</a></li> -->
 							<li><a href="/viz-lab">Viz Lab</a></li>
-							<!-- <li><a href="{{ url_for('learning_center'%}">Learning Center</a></li> -->
-							<!-- <li><a href="{{ url_for('contact'%}">Contact</a></li> -->
+                            <li><a href="/camp">Camp</a></li>
 						</ul>
 					</div>
 					<!-- /footer nav -->
