--- a/django/bootcamp/templates/visualization_lab.html
+++ b/django/bootcamp/templates/visualization_lab.html
@@ -298,9 +298,9 @@
 				<div class="row">
 
 					<div class="col-md-8 col-md-offset-2 text-center">
-						<h2 class="white-text">Contact Us</h2>
+						<h2 class="white-text">CONTACT US</h2>
 						<p class="lead white-text">Give us a shout! We'd love to hear your feedback or work together.</p>
-						<button id="contact-button" class="main-button icon-button" onclick="sendMail(); return false">Contact Us</button>
+						<button id="contact-button" class="main-button icon-button" onclick="sendMail(); return false">CONTACT US</button>
 					</div>
 
 				</div>
