--- a/django/bootcamp/templates/visualization_lab.html
+++ b/django/bootcamp/templates/visualization_lab.html
@@ -364,7 +364,7 @@
 					<!-- copyright -->
 					<div class="col-md-8 col-md-pull-4">
 						<div class="footer-copyright">
-							<span>&copy; Copyright 2019 - 2020 Court Science Inc. All rights reserved.</span>
+							<span>&copy; 2020 Court Science Inc. All rights reserved.</span>
 						</div>
 					</div>
 					<!-- /copyright -->
