--- a/django/bootcamp/templates/index.html
+++ b/django/bootcamp/templates/index.html
@@ -46,6 +46,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="text-center">
+							<br><br><br>
 							<h1 class="white-text" style="font-size: 65px; font-weight: 700;">STEM THROUGH SPORTS.</h1>
 							<br>
                             <p class="lead white-text" style="font-size: 26px;">Court Science is the interactive online platform that makes it fun and easy for youth to explore sports data science and step up their game in the classroom and on the court!</p>
@@ -70,11 +71,12 @@
 						<div class="section-header text-center">
 							<h2>WHO WE ARE</h2>
 							<p class="lead">
-                                Court Science is a federally incorporated not-for-profit organization that aims to bridge the gap between STEM and sports
-                                by making the power of Data Science accessible to youth and sports enthusiasts worldwide, through our free online interactive
-                                data visualization platform and community initiatives. In light of COVID-19, we have shifted all of our outreach efforts online
-                                including a free Sports Science Camp with a series of live virtual international workshops geared towards youth interested in
-                                exploring their favourite sport through the lens of STEM and creative problem solving, while learning about Data Science.
+                                Court Science is a Canadian not-for-profit organization that aims to bridge the gap between STEM and sports
+                                by making the power of Data Science accessible to youth and sports enthusiasts worldwide through our free online interactive
+								data visualization platform and community initiatives. <br><br>
+								
+								In light of COVID-19, we have shifted all of our outreach efforts online including a <span style="font-weight: bolder; color: #FF6700;">FREE</span> Sports Science Camp. <br> A series of live virtual workshops geared towards youth interested in
+                                exploring their favourite sport through the lens of STEM and creative problem solving.
                             </p>
 						</div>
 
